# ifj2018

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  error.c  error.h  expression.c  expression.h  gc.c  gc.h  ifj18.c  khash.h  list.c  list.h  main.c  parser.c  parser.h  prettyprint.c  prettyprint.h  scanner.c  scanner.h  semantics.c  semantics.h  shitty  stack.c  stack.h  strlib.c  strlib.h  symtable.c  symtable.h  test.rb  utils.c  utils.h
error/: error.c  error.h
expression/: expression.c  expression.h
gc/: gc.c  gc.h
parser/: parser.c  parser.h
scanner/: scanner.c  scanner.h
semantics/: semantics.c  semantics.h
test/: test.c
test/supertests/: parser_data.json  run.rb  test_blackbox.py
test/supertests/in/: complex_expr.rb  complex_func.rb  div.rb  double_assign.rb  factorial.rb  func_calls_func.rb  func_with_args.rb  func_with_if.rb  func_with_while.rb  mul.rb  nested_else.rb  nested_if.rb  nested_if_with_assign.rb  print_complex_string.rb  print_expr.rb  print_string.rb  scope.rb  simple_else.rb  simple_func.rb  simple_if.rb  simple_while.rb  sub.rb  while_with_if.rb
test/unit_tests/: parser_data.json  test_scaner.py
utils/: list.c  list.h  prettyprint.h  stack.c  stack.h  strlib.c  strlib.h  utils.c  utils.h
